<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">40Life</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pref_vibrate">Haptic feedback</string>
    <string name="pref_description_vibrate">Vibrate when life buttons are pressed.</string>
    <string name="action_reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_lifedetail">Player Life</string>
    <string name="life">Life</string>
    <string name="toggle_poison_counters">Toggle poison counters</string>
    <string name="commander_combat_damage">Commander combat damage</string>
    <string name="poison_caps">POISON</string>
    <string name="life_caps">LIFE</string>
    <string name="action_random">Flip Coin/Roll Dice</string>
    <string name="action_profile">Commander Profile</string>
    <string name="title_activity_profile">Commander Profile</string>
    <string name="action_search_commander">Search for a Commander</string>
    <string name="action_search">Search</string>
    <string name="title_activity_seach"></string>
    <string name="action_anounce">Announce Life</string>
    <string name="action_mana_white">White</string>
    <string name="action_mana_blue">Blue</string>
    <string name="action_mana_black">Black</string>
    <string name="action_mana_red">Red</string>
    <string name="action_mana_green">Green</string>
    <string name="action_done">Done</string>
    <string name="action_accept">Accept</string>
    <string name="action_search_byname">Search by Name</string>
    <string name="no_results">No Results</string>
    <string name="error_result">No Connection</string>

</resources>
