<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_random"
        android:title="@string/action_random"
        android:icon="@drawable/ic_action_random"
        android:orderInCategory="10"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_action_dragon"
        android:orderInCategory="20"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_announce"
        android:title="@string/action_anounce"
        android:orderInCategory="20"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="10"
        app:showAsAction="never" />
</menu>
